--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <title>Personal</title>
   </head>
   <body>
+    <!-- Start Navigation Bar -->
     <nav>
       <div class="container">
-        <h1 class="logo">Mustafa</h1>
+        <h1 class="logo" data-text="Mustafa">Mustafa</h1>
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="#about-me">About Me</a></li>
@@ -23,10 +24,13 @@
     </nav>
     <main id="home">
       <div class="container">
-        <h2>Welcome To My Personal Website!</h2>
+        <div>
+          <h2>Welcome To My Personal Website!</h2>
+        </div>
         <img src="imgs/my-image.jpg" alt="" />
       </div>
     </main>
+    <!-- Start About Me -->
     <section id="about-me" class="about-me">
       <div class="section-title">About Me</div>
       <div class="container">
@@ -67,6 +71,7 @@
         </table>
       </div>
     </section>
+    <!-- Start Protfolio -->
     <section id="protfolio" class="portfolio">
       <div class="section-title">Portfolio</div>
       <div class="container">
@@ -120,6 +125,7 @@
         </div>
       </div>
     </section>
+    <!-- Start Footer -->
     <footer>
       <div id="contact" class="container">
         <div class="contact">
